git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@111 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -4,6 +4,23 @@ Release notes:
 -----------------------------------------------------------------------
 -----------------------------------------------------------------------
 
+select bp_bug, sum(bp_size) bytes
+into #t 
+from bug_posts
+where bp_type = 'file'
+group by bp_bug
+
+select '#ffffff', bg_id [id], bg_short_desc [desc],
+bytes
+from bugs
+inner join #t on bp_bug = bg_id
+WhErE 1 = 1
+order by bytes desc
+
+drop table #t
+
+
+
 * dashboard
 
 * many to many, queries to organizations
