--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -48,6 +48,9 @@ spend time on this:
 in Web.config.
 
 
+admin, 
+
+
 -----------------------------------------------------------------------
 Version 2.7.9  3/1/2008
 -----------------------------------------------------------------------
