git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@116 25256582-783d-0410-8f03-f819f29fef2d

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -50,6 +50,15 @@ in Web.config.
 
 admin, 
 
+-----------------------------------------------------------------------
+Version 2.8.0  3/8/2008
+-----------------------------------------------------------------------
+
+
+"SendJustOneEmail" is obsolete
+
+
+* got rid of view_bug_history.aspx page.  delete yours.
 
 -----------------------------------------------------------------------
 Version 2.7.9  3/1/2008
