--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -19,9 +19,23 @@ uploads not supported.
 * document ldap at ifdefined.
 * 1843726 Newline, trailing spaces in dropdown vals causes error
 
+* bug, issue, defect - googling the various phrases
+* my rejection from google
+* top things bugtracker.net can't do: foreign languages, linux, multiple databases
+* time tracking
+* estimating?
+* wiki?
+
+Regarding the position of the validation error messages, moving them with css, I apologize for not answering that post. I also would not be able to do it using .css. Another developer recently volunteered to help with BugTracker.NET and what I asked him to do was to make the edit_bug.aspx friendly to css positioning. We'll see how that goes.
+
+Regarding the way I used syscolumns, well, it's a bad design by me, but because of backwards compatibility issues, I may be stuck with that design. I'm glad you were able to workaround my design mistake. If nothing else, I need to update the documentation to include your workaround.
+
+
 -----------------------------------------------------------------------
 Version 2.8.1  3/15/2008
 -----------------------------------------------------------------------
+
+* bug with text saved for searching.  Reedit.
 
 * Added new "dashboard" page. It's a way of displaying the results of
 several reports all on one page, customized for you. Go to "reports" 
