--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -30,6 +30,13 @@ uploads not supported.
 
 * edit_bug.aspx and css
 
+
+-----------------------------------------------------------------------
+Version 2.8.2  3/22/2008
+-----------------------------------------------------------------------
+
+* Added filtering to users.aspx, in case you have many, many users.
+
 -----------------------------------------------------------------------
 Version 2.8.1  3/15/2008
 -----------------------------------------------------------------------
@@ -37,7 +44,7 @@ Version 2.8.1  3/15/2008
 To upgrade to this release, run the SQL near the bottom of upgrade.sql.
 
 * Fixed bug 1914408 "bp_comment_search contains formating info from
-fckEditor".  If you entered text using fckEditor, there was logic to
+fckEditor". If you entered text using fckEditor, there was logic to
 strip out the formating so that searching in the text would work ok.
 
 For example, instead of saving
@@ -46,14 +53,17 @@ the logic would save
 	hot and cold
 
 At some point in time, the logic to strip out the formating was 
-accidently removed.  My changes here won't fix any data that's already 
+accidently removed. My changes here won't fix any data that's already 
 been stored in your database.
 
 I also corrected one of the sample queries to display data from
 bp_comment_search instead of bp_comment.
 
+* Fixed bug 1913912 "LimitUsernameDropdownsInSearch doesn't work with 
+NULLs". Thanks to "matro" for the fix.
+
 * Added a last login date to the user table, to keep track of when
-a user last logged in.  Now that there is a public demo of 
+a user last logged in. Now that there is a public demo of 
 BugTracker.NET, I myself need the date to be able to get rid of users
 who have been inactive for a long time.
 
@@ -102,14 +112,14 @@ qn_body ntext not null
 )
 
 Fixed bug 1900496 "print bug, emails, history, don't obey fld
-permissions".  As part of this bug fix, the Web.config option 
+permissions". As part of this bug fix, the Web.config option 
 "SendJustOneEmail" is now obsolete.
 
 I've rewritten the logic for sending out the notifications so that it
 first stores the email into the new "queued_notifications" table and 
-then another thread sends the emails.  The only way for me to fix the
+then another thread sends the emails. The only way for me to fix the
 bug 1900496 was to compose and send a separate email for each user
-receiving a notification.  But the sending itself can take a long time,
+receiving a notification. But the sending itself can take a long time,
 so that's why I now queue them at first, and then send them in another
 thread later.
 
@@ -133,12 +143,12 @@ Also in this release:
 but I only just now have removed it from Web.config.
 
 * Added new setting to Web.config that might help you if you have lots
-of users.   Here's what it says in Web.config
+of users.  Here's what it says in Web.config
 
 <!--
 	If this is set to "1", then the list of user names in the dropdowns
 	in the search page is limited to those users who have either reported bugs
-	or have bugs currently assigned to them.  Setting this to "1" might
+	or have bugs currently assigned to them. Setting this to "1" might
 	make the search page load slower. Setting it to "0" might result in
 	too many names in the dropdowns on the search page.
 -->
