--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -4,9 +4,8 @@ Release notes:
 -----------------------------------------------------------------------
 -----------------------------------------------------------------------
 
-* many to many, queries to organizations
 * Wordwrap, and take advantage of new api to add attachment as attachment
-* apostrophe's, commas, quotes in custom field names, values
+* many to many, queries to organizations
 * excel export for reports
 * field level permissions for custom fields?
 * escalation/reminder
@@ -17,14 +16,11 @@ uploads not supported.
 * make read only if closed
 * document workflow.cs at ifdefined.
 * document ldap at ifdefined.
-* 1843726 Newline, trailing spaces in dropdown vals causes error
 
 * bug, issue, defect - googling the various phrases
 * my rejection from google
 * top things bugtracker.net can't do: foreign languages, linux, multiple databases
 * time tracking
-* estimating?
-* wiki?
 
 * syscolumns, column order scheme
 
@@ -35,7 +31,21 @@ uploads not supported.
 Version 2.8.2  3/22/2008
 -----------------------------------------------------------------------
 
-* Added filtering to users.aspx, in case you have many, many users.
+Minor changes:
+
+* Added filtering to users.aspx, in case you have many, many users, to
+limit how many users are displayed.
+
+* Some links were visible to guests even though logic downstream would
+prevent them from actually being used, like merge and mass edit.  Now
+the links aren't shown to guests.
+
+* Added more validation to the "add custom field" page. The validation
+takes care of the following bugs:
+
+1843742 Custom column named "URL" breaks search.aspx
+1843726 Newline, trailing spaces in dropdown vals causes error
+1914410 "required" not working with custom field of type "user"
 
 -----------------------------------------------------------------------
 Version 2.8.1  3/15/2008
